apps/test-iscsi/base/test-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-test
spec:
  strategy:
    type: Recreate 
  replicas: 1
  selector:
    matchLabels:
      app: storage-test
  template:
    metadata:
      labels:
        app: storage-test
    spec:
      containers:
      - name: nginx
        image: nginx
        securityContext:
          runAsNonRoot: true
          runAsUser: 101
          runAsGroup: 101
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: my-storage
        - mountPath: /var/cache/nginx
          name: nginx-cache
        - mountPath: /var/run
          name: nginx-run
      volumes:
      - name: my-storage
        persistentVolumeClaim:
          claimName: iscsi-test-pvc

            ---
apiVersion: v1
kind: Service
metadata:
  name: storage-test-svc
spec:
  type: LoadBalancer
  selector:
    app: storage-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
