apps/test-iscsi/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-test-ingress
  annotations:
    # Dit vertelt Kubernetes dat Nginx deze regel moet afhandelen
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: storage.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: storage-test-svc
            port:
              number: 80
